# ControlUnitreeG1withROS

./: .gitignore  Instruction.md  README.md
src/: run_g1_voice.sh
src/g1_bridge/: CMakeLists.txt  LIBRARY_CHECK.md  QUICKSTART.txt  README.md  TROUBLESHOOTING.md  package.xml  run_g1_bridge.sh  run_g1_bridge_simple.sh
src/g1_bridge/src/: g1_asr_bridge.cpp  g1_tts_bridge.cpp
src/rllab_deploy_ros/robots/g1_29dof/: CMakeLists.txt  main.cpp  package.xml  run_g1_ctrl.sh
src/rllab_deploy_ros/robots/g1_29dof/config/: config.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/boxer/: boxer.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/boxer/params/: env.yaml  tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/conductor/: conductor.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/conductor/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/golf/: golf.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/golf/params/: tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/kick/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/kick/params/: tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/mix/params/: env.yaml  tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/police/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/police/params/: agent.yaml  tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/warm_up/: warm_up.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/warm_up/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/warm_up/params/: agent.yaml  tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/zombie/: zombie.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/zombie/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/demo_0116/zombie/params/: env.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/anti_clock/params/: env.yaml  tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/confident/: g1_confident_step_66_raw_qpos.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/confident/exported/: policy.pt
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/confident/params/: agent.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/narrow_beam/exported/: policy.pt
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/narrow_beam/params/: env.yaml  tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/runner/: runner_qpos.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/runner/exported/: policy.pt
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/tennis/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/tennis/params/: agent.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/jiky/touch_knee/params/: tracking_env_cfg.py
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/boxer/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/boxer/params/: agent.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/conductor/params/: agent.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/golf/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/golf/params/: agent.yaml  env.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/kick/: kick.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/kick/params/: agent.yaml  env.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/mix/: mix.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/mix/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/police/: police.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/police/params/: env.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/demo_0116/warm_up/params/: env.yaml
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/jiky/anti_clock/: anti_clock_qpos.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/jiky/narrow_beam/: narrow_beam_qpos.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/jiky/tennis/: tennis_qpos.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/jiky/touch_knee/: touch_knee_qpos.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/mimic/queencard/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/queencard/params/: queen_card.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/zootopia/v0_wasted/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/zootopia/v0_wasted/params/: zootopia.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/zootopia/v1/exported/: policy.onnx
src/rllab_deploy_ros/robots/g1_29dof/config/policy/mimic/zootopia/v1/params/: zootopia2.csv
src/rllab_deploy_ros/robots/g1_29dof/config/policy/velocity/v1/exported/: policy.onnx  policy.pt
src/rllab_deploy_ros/robots/g1_29dof/config/policy/velocity/v1/params/: deploy.yaml
src/rllab_deploy_ros/robots/g1_29dof/include/: motion_node.h
src/rllab_deploy_ros/robots/g1_29dof/src/: State_RLBase.cpp  motion_node.cpp
src/robot_task_tools/: package.xml  setup.cfg  setup.py
src/robot_task_tools/robot_task_tools/: config.json  prompt_router_node.py
src/robot_task_tools/robot_task_tools/prompts/: pure_llm_prompt.txt  pure_llm_prompt_en.txt
(+26 files in other folders)
